fix: trait description on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@
 .concept-title {
   font-family: 'Cormorant Garamond';
   font-style: normal;
-  font-weight: bolder;
+  font-weight: 800;
   background: linear-gradient(90.86deg, #FFC6CE 26.22%, #64D6EE 97.07%);
   background-clip: text;
   -webkit-background-clip: text;
